name:                pingershv2
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/pingershv2#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , http-client
                     , hashmap
                     , servant-client
                     , servant-server
                     , stm
                     , transformers
                     , time
                     , text
                     , wai
                     , wai-logger
                     , warp
  default-language:    Haskell2010

executable pingershv2-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pingershv2
  default-language:    Haskell2010

test-suite pingershv2-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pingershv2
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/pingershv2
